--- a/README.textile
+++ b/README.textile
@@ -6,9 +6,11 @@ The methods are defined only if the native methods are not available. This means
 
 h1. Implemented Methods
 
-Currently only Array.prototype new methods are implemented:
+Currently only the following new methods are implemented:
 
 <pre><code>Array.prototype.indexOf    ( searchElement [, fromIndex ] )
+Object.create( proto ) // does not support second parameter
+
 Array.prototype.lastIndexOf( searchElement [, fromIndex ] )
 Array.prototype.forEach    ( callback [, thisArg ] )
 Array.prototype.every      ( callback [, thisArg ] )
@@ -19,4 +21,6 @@ Array.prototype.reduce     ( callback [, initialValue ] )
 Array.prototype.reduceRight( callback [, initialValue ] )
 </code></pre>
 
-For more information on the above methods, check the "Anotated ECMAScript standard on github":http://es5.github.com/#x15.4.4.14
+For more information on the above methods, and implementation, check:
+* the "Anotated ECMAScript standard on github":http://es5.github.com/#x15.4.4.14
+* "Mozilla MDN Object.create()":https://developer.mozilla.org/en/JavaScript/Reference/Global_Objects/Object/create
